--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 # Site settings
 baseURL = "/"
 languageCode = "en-US"
-title = "Split - HTML Template Demo"
+title = "Better Help & Gardens"
 theme = "hugo-split-theme"
 disableKinds = ["section", "taxonomy", "taxonomyTerm", "RSS", "sitemap"]
 
@@ -9,7 +9,7 @@ disableKinds = ["section", "taxonomy", "taxonomyTerm", "RSS", "sitemap"]
 googleAnalytics = ""
 
 # Copyright
-copyright = "&copy;2021 Your Name"
+copyright = "&copy;2021 Noz"
 
 [params]
 
