--- a/config.toml
+++ b/config.toml
@@ -47,11 +47,11 @@ copyright = "&copy;2021 Noz"
 
       [[params.links.list1.link]]
         text = "0412 123 123"
-        url = "#"
+        url = "tel:0412123123"
 
       [[params.links.list1.link]]
         text = "Email"
-        url = "betterhelpandgardens@gmail.com"
+        url = "mailto:betterhelpandgardens@gmail.com"
 
   # Links List #2
   [[params.links]]
