--- a/config.toml
+++ b/config.toml
@@ -47,7 +47,7 @@ copyright = "&copy;2021 Noz"
 
       [[params.links.list1.link]]
         text = "0412 123 123"
-        tel = "tel:0412123123"
+        url = "#"
 
       [[params.links.list1.link]]
         text = "Email"
